# vk-device-reorder

./: Cargo.toml  LICENSE  README.md  build.rs  manifest.json
src/: config.rs  dispatch.rs  lib.rs  wrapper.h
