[package]
name = "vk-device-reorder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4"
paste       = "1.0"
serde       = {version="1.0", features=["derive"]}
serde_json  = "1.0"

[build-dependencies]
bindgen     = "0.60.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
